# hkpug-opik-14-days-challenge

./: .gitignore  README.md  pyproject.toml  task-2-report.md  task-3-bank-report.md
.github/tournament/: evaluation_bank.json.cms  pyproject.toml  team_allowlist.json
.github/workflows/: deploy-pages.yml  playground-smoke.yml  release-helper.yml  scoring-status.yml  trusted-score.yml  validate-submission.yml
.superpowers/sdd/: progress.md  task-1-report.md  task-2-report.md  task-3-bank-report.md  task-3-schema-report.md
dashboard/: app.js  index.html  leaderboard.json  styles.css
docs/: import-opik.md
docs/qa/: discovery-review.md  playground-smoke.md  question-review.md
public/: cases.json
public/contexts/: account_access.md  api_limits.md  billing.md  company_handbook.md  data_retention.md  integrations.md  privacy.md  refunds.md  security.md  service_incidents.md  subscriptions.md
scripts/: build_evaluation_bank.py  build_hidden_bank.py  encrypt_feedback.sh  run_playground.py  validate_submission.py
src/hkpug_challenge/: __init__.py  dataset.py  evaluation_bank.py  hidden.py  leaderboard.py  models.py  playground.py  (+6 more)
starter/: prompt.example.txt  prompt.weak-control.txt
state/: events.jsonl.cms
submission/: decrypt_feedback.sh  encrypt_prompt.sh  manifest.example.json  manifest.json  manifest.sig  prompt.example.txt  prompt.txt.cms
tests/: test_dashboard.py  test_evaluation_bank.py  test_hidden_bank.py  test_leaderboard.py  test_playground.py  test_pr_validation.py  test_public_dataset.py  test_scoring.py  test_submission.py  test_workflows.py
(+115 files in other folders)
