[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hkpug-challenge"
version = "0.1.0"
description = "Public challenge package and contracts for the HKPUG 14-day Opik challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=45,<46",
  "pydantic>=2.8,<3",
  "pyright>=1.1.402",
  "pytest>=8.3,<9",
  "ruff>=0.12,<0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hkpug_challenge"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
pythonVersion = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
